--- a/src/main/resources/templates/panel.html
+++ b/src/main/resources/templates/panel.html
@@ -27,6 +27,20 @@
     <button type="submit">Filter</button>
 </form>
 
+<form th:action="@{/admin/products/add}" method="post">
+    <input type="text" name="name" placeholder="Product Name"/>
+    <input type="number" name="price" placeholder="Price"/>
+
+    <select name="categoryId">
+        <option th:each="cat : ${categories}"
+                th:value="${cat.id}"
+                th:text="${cat.name}"></option>
+    </select>
+
+    <button type="submit">Add Product</button>
+</form>
+
+
 <h2>Orders</h2>
 <table border="1">
     <thead>
