--- a/src/main/resources/templates/order-panel.html
+++ b/src/main/resources/templates/order-panel.html
@@ -10,6 +10,7 @@
 <h3>Create Order</h3>
 <form th:action="@{/orders/panel}" method="post">
     <select name="productId" required>
+        <option value="" disabled selected>Select a product</option>
         <option th:each="p : ${products}"
                 th:value="${p.id}"
                 th:text="${p.name}"></option>
