--- a/src/main/resources/templates/admin/categories/list.html
+++ b/src/main/resources/templates/admin/categories/list.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Kategoriler</title>
+    <title>Categories</title>
 </head>
 <body>
-<h1>Kategoriler</h1>
-<a th:href="@{/admin/categories/add}">Yeni Kategori Ekle</a>
+<h1>Categories</h1>
+<a th:href="@{/admin/categories/add}">Create a New Category</a>
 <table>
     <thead>
     <tr>
         <th>ID</th>
-        <th>İsim</th>
+        <th>Category Name</th>
     </tr>
     </thead>
     <tbody>
