--- a/src/main/resources/templates/admin/categories/add.html
+++ b/src/main/resources/templates/admin/categories/add.html
@@ -2,20 +2,20 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Kategori Ekle</title>
+    <title>Create a New Category</title>
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-<h1>Yeni Kategori Ekle</h1>
+<h1>Create a New Category</h1>
 
 <form th:action="@{/admin/categories/save}" th:object="${category}" method="post">
     <div>
-        <label for="name">Kategori Adı:</label>
-        <input type="text" id="name" th:field="*{name}" placeholder="Kategori adı" required />
+        <label for="name">Category Name:</label>
+        <input type="text" id="name" th:field="*{name}" placeholder="Category Name" required />
     </div>
 
     <div>
-        <button type="submit">Kaydet</button>
+        <button type="submit">Save</button>
         <a th:href="@{/admin/categories}">Geri</a>
     </div>
 </form>
