--- a/src/main/resources/templates/panel.html
+++ b/src/main/resources/templates/panel.html
@@ -28,15 +28,15 @@
 </form>
 
 <form th:action="@{/panel/addProduct}" method="post" th:object="${product}">
-    <input type="text" th:field="*{name}" placeholder="Ürün Adı" required/>
-    <input type="number" th:field="*{price}" placeholder="Fiyat" required/>
+    <input type="text" th:field="*{name}" placeholder="Product Name" required/>
+    <input type="number" th:field="*{price}" placeholder="Price" required/>
 
     <select name="categoryId" required>
-        <option value="">Kategori Seç</option>
+        <option value="">Choose a Category</option>
         <option th:each="cat : ${categories}" th:value="${cat.id}" th:text="${cat.name}"></option>
     </select>
 
-    <button type="submit">Ürün Ekle</button>
+    <button type="submit">Create Product</button>
 </form>
 
 
