--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -22,8 +22,15 @@
     <input type="text" name="cardNumber" placeholder="Card Number" required/><br/>
     <input type="text" name="expiry" placeholder="MM/YY" required/><br/>
     <input type="text" name="cvv" placeholder="CVV" required/><br/>
+
+    <label for="address">Delivery Address:</label>
+    <input type="text" id="address" name="address"
+           th:value="${userAddress}"
+           placeholder="Enter Your Address" required />
+
     <button type="submit">Pay & Order</button>
 </form>
+
 
 <a th:href="@{/orders/panel}">Back to Panel</a>
 </body>
